--- a/index.html
+++ b/index.html
@@ -2,20 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Meu Portfólio</title>
 </head>
 <body>
- <p>eu sou a fernanda </p>
-    <p> eu ensino programação</p> 
-    <p>minhas habilidades </p> 
-    <div>
-        
-        <p>HTML</p>
-        <p>CSS</p>
-        <p>JavaScript</p>
-        <p>Scratch</p>
-    </div>
+    <header class="container text-center">
+  <img src="imagens/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150">
+        <p class="lead">Eu sou o Xax</p>
+        <p>Eu ensino Programação</p>
+        <p>Minhas habilidades</p>
+        <div>            
+            <p class="badge bg-secondary">HTML</p>
+            <p class="badge bg-secondary">CSS</p>
+            <p class="badge bg-secondary">JavaScript</p>
+            <p class="badge bg-secondary">Scratch</p>  
+        </div>
+    </header>
+    <main>
+        <h2>Meus Projetos</h2>
+        <div class="row">
+            <!--Projeto 1 -->
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="imagens/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <div class="card-body">
+                        <h5 class="card-title">Minha Biblioteca: uma Webpage Personalizada</h5>
+                        <p class="card-text">exemplo</p>
+                        <a href="#" class="btn btn-primary">Veja o Projeto</a>
+                    </div>
+                </div>
+            </div>
+             <!--Projeto 2 -->
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="imagens/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <div class="card-body">
+                        <h5 class="card-title">decidindo o futuro:uma jornada interativa sobre inteligencia artificial</h5>
+                        <p class="card-text">exemplo</p>
+                        <a href="#" class="btn btn-primary">Veja o Projeto</a>
+                    </div>
+                </div>
+            </div>
+             <!--Projeto 3 -->
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="imagens/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <div class="card-body">
+                        <h5 class="card-title">explorando o universo: uma aventura interativa em astronomia com scratch</h5>
+                        <p class="card-text">exemplo</p>
+                        <a href="#" class="btn btn-primary">Veja o Projeto</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+<footer class="container py-5">
+<h2>entre em contato</h2>
+<div>
+    <a href=""></a>
+</div>
+</footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
