--- a/index.html
+++ b/index.html
@@ -58,6 +58,27 @@
             </div>
         </div>
     </main>
+  <div class="modal" tabindex= "-1">
+    <div class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">modal title </h5>
+                <button type= "button"class="btn-close" data-bs- dismniss="modal" aria-label="close"></button>
+            </div>
+            <div class="modal-body">
+                <p>modal body</p>
+            </div>
+            <div class="modal -footer">
+                <button typeclass="btn btn-secondary"></button>
+            </div>
+        </div>
+    </div>
+  </div>
+  
+
+
+
+
 <footer class="container py-5">
 <h2>entre em contato</h2>
 <div>
